# AutoNexusGraph

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COST_GUARD.md  Makefile  PRD.md  README.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.prod.yml  docker-compose.yml  llm_guard.py  progress_graph_data_guide.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  data_source.md  feature_request.md
.github/workflows/: ci.yml
docs/: LEARNING.md  api_reference.md  architecture.md  audit_baseline.json  autograph.md  data_catalog.md  data_inventory.md  data_lineage.md  data_sources.md  faq.md  gold_qa_guide.md  ipgraph.md  learning_guide.md  mental_model.md  process_graph.md  quickstart.md  runbook_traces.md  system_review.md
docs/design/: 0001-langgraph-stategraph.md  0002-domainhandler-plugin.md  0003-bridge-corp-entity.md  0004-p1-p4-extraction.md  README.md
docs/evaluation/: legacy_eval_framework.md
docs/operations/: agents.md  allganize_external_benchmark_report.md  api_keys_pending.md  backup_dr.md  bridge_review.md  data_pipeline.md  docker_setup.md  eval_when_keys_arrive.md  kcgs_esg_guide.md  migrations.md  monitoring.md  production_deploy.md  rag_tools.md
docs/research/: external_validity_protocol.md  thesis_hybrid_routing.md
eval/: __init__.py
eval/adapters/: __init__.py  base.py  graph_adapter.py  hybrid_adapter.py  iter_vector_adapter.py  sql_vec_adapter.py  vector_adapter.py
eval/metrics/: __init__.py  _text_norm.py  _thesis.py  _thresholds.py  bom_coverage.py  bridge_quality.py  core_diff.py  data_coverage.py  edge_meta_completeness.py  em_f1.py  execution_accuracy.py  faithfulness.py  hits_at_k.py  latency.py  llm_judge.py  main_hop_efficiency.py  prd_dashboard.py  refusal.py
eval/qa_gold/: README.md  _stage2_cd_l4_ip.jsonl  _stage2_new_cross.jsonl  gold_qa_allganize_noKIF.jsonl  gold_qa_allganize_v0.example.jsonl  gold_qa_allganize_v0.jsonl  gold_qa_auto_defect_v0.jsonl  gold_qa_auto_v0.jsonl  gold_qa_cross_store_paraphrase_v0.jsonl  gold_qa_cross_store_v0.jsonl  gold_qa_cross_v0.jsonl  gold_qa_graph_multihop_docfirst_v0.jsonl  gold_qa_graph_multihop_novel_v0.jsonl  gold_qa_graph_multihop_v0.jsonl  gold_qa_ip_v0.jsonl  gold_qa_multigrade_calib_v0.jsonl  gold_qa_v0.example.jsonl  gold_qa_v0.jsonl
eval/runners/: __init__.py  run_matrix_smoke.py  run_qa_eval.py
infra/: Dockerfile
infra/monitoring/: alerts.yml  grafana_dashboard.json  prometheus.yml
ontology/: entities.yaml  relations.yaml
ontology/auto/: entities.yaml  evo_alignment.yaml  materials_metals_seed.yaml  materials_seed.yaml  nhtsa_complaint_systems.yaml  part_seed.yaml  performed_at_seed.yaml  plants.yaml  relations.yaml
ontology/ip/: entities.yaml  relations.yaml
scripts/: audit_docs.py  data_inventory.py  eval_llm_judge_allganize.py  healthcheck.py  migrate_neo4j_schema.py  query_demo.py  serve_embeddings.py  validate_cross_source.py
scripts/audit/: b_issues.py  bom_coverage.py  calibrate_confidence.py  convert_allganize_gold.py  data_channels.py  dod_audit.py  edge_meta_invariants.py  eval_matrix_smoke.py  external_curator_ratio.py  graph_answerability.py  ipgraph_smoke.py  mcp_smoke.py  ontology_validate.py  trace_smoke.py  validate_gold_qa.py
scripts/gold/: gen_graph_multihop_gold.py  gen_multigrade_calib_gold.py
scripts/ingest/: bulk_dart.py  bulk_dart_structural.py  download_business_reports.py  download_corp_codes.py  download_documents.py  download_ecos.py  download_financials.py  download_fss_press.py  download_ftc_groups.py  download_gleif.py  download_kcgs.py  download_kipris.py  download_kosis.py  download_law.py  download_listings.py  download_news_rss.py  download_sec_edgar.py  download_wikidata.py  download_wikipedia.py  ingest_allganize_pdfs.py  ingest_wikidata_part_supplies.py  vlm_chart_extract.py
scripts/load/: build_chunks.py  build_chunks_wikipedia.py  embed_chunks.py  extract_business_report_relations.py  load_all.py  load_companies.py  load_entity_map.py  load_filings.py  load_financials.py  load_gleif.py  load_graph_companies.py  load_graph_news_corel.py  load_graph_structural.py  load_kcgs.py  load_news.py  load_persons.py  load_sec_edgar.py  load_validated_relations.py  load_wikidata.py  load_wikipedia.py
scripts/migrate/: backfill_neo4j_domain.py  dedup_persons_neo4j.py  dedupe_suppliers_by_name_norm.py  migrate_bridge_supplier_qid_to_id.py  migrate_entity_map_to_entities.py  relabel_neo4j_namespace.py  rename_pg_schemas_namespace.sql  seed_company_common_aliases.py
scripts/ops/: backup.sh  restore.sh
src/autograph/: __init__.py  agent_handler.py  config.py  cypher_templates_auto.py  ontology.py  policy.py
src/autonexusgraph/: bridge_review.py  config.py  embed_status.py  embeddings.py  feedback_stats.py  freshness.py  logging_setup.py  metrics_exporter.py  persons_collision.py
src/common/: __init__.py  neo4j_loader.py  retrieve_base.py
src/fingraph/: config.py  embeddings.py
src/ipgraph/: __init__.py  agent_handler.py  cypher_templates_ip.py  policy.py  (+1 more)
tests/: conftest.py  test_agent_scenarios.py  test_answer_confidence.py  test_api_auth.py  test_autograph_routing.py  test_bridge_review.py  test_broad_except_hygiene.py  test_checkpointer.py  test_common_neo4j_loader.py  test_confidence_policy.py  test_cost_approval.py  test_cost_estimator.py  test_cost_log.py  test_cross_store_ranking_gate.py  test_cypher_templates.py  test_dart_production_parser.py  test_datagokr_recalls_loader.py  test_deterministic_cross_store_routing.py  test_domain_handler.py  test_domain_plugin_discovery.py  test_embed_status.py  test_embeddings.py  test_eval_matrix.py  test_eval_metrics_extension.py  test_evo_alignment.py  test_executor_fallback.py  test_factoryon_plants_loader.py  test_feedback_stats.py  test_freshness.py  test_graph_smoke.py  test_hop_metrics.py  test_ingestion.py  test_interrupts.py  test_ipgraph.py  test_ir_relation_extractor.py  test_license.py  test_llm_adapter.py  test_llm_fallback.py  test_llm_planner.py  test_llm_planner_prompt_hardening.py  (+44 more)
(+320 files in other folders)
