[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonexusgraph"
version = "0.1.0"
description = "한국 상장사 공시·재무 기반 금융 GraphRAG 에이전트 (Multi-Agent + Planning, LangGraph)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "areumsim" }]
license = { text = "Proprietary" }
keywords = ["graphrag", "finance", "korean", "dart", "langgraph", "neo4j"]

# 최소 런타임 의존 — 어느 모듈을 쓰든 필요한 공통 의존
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]

# 데이터 수집 (DART/KRX/ECOS)
ingest = [
    "pandas>=2.2",
    "lxml>=5.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "finance-datareader>=0.9",  # KRX 마스터 + 시가총액 (KRX MDC 직접 호출 대체)
    "tqdm>=4.65",               # 일괄 크롤러 진행률
]

# LLM 어댑터
llm = [
    "openai>=1.40",
    "anthropic>=0.30",
]

# DB 드라이버
db = [
    "neo4j>=5.20",
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.3",            # PG vector 컬럼 ↔ numpy/list 변환
    "qdrant-client>=1.9",       # 옵션 (compose 의 qdrant 활성화 시)
    "sqlalchemy>=2.0",
]

# 에이전트 (LangGraph + FastAPI)
agent = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",  # PG checkpointer (PRD §7.5.8)
    "langchain-core>=0.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # Tracing (PRD §7.5.11 + §10 DoD #17 (b)) — Langfuse 4.x OTEL native (CallbackHandler 폐기).
    # LangSmith 분기는 env-flag 자동 송신 (langchain 자동 설치 시 작동).
    "langfuse>=4.0",
    "langsmith>=0.1",
    # calculator_worker — eval() fallback 제거 후 numexpr 강제 (보안).
    "numexpr>=2.10",
]

# MCP 래퍼 (PRD §10 DoD #17 (a)) — 외부 에이전트 (Claude Desktop / Cline / OpenAI Agents SDK)
# 가 우리 typed tool pool 호출. SDK 미설치 환경 fail-soft.
mcp = [
    "mcp>=1.0",
]

# UI
ui = [
    "streamlit>=1.35",
    "plotly>=5.20",
    "pyvis>=0.3",
]

# 개발 도구
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
]

all = [
    "autonexusgraph[ingest,llm,db,agent,mcp,ui,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["autonexusgraph*", "autograph*", "ipgraph*", "common*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: 실제 DB/LLM/외부 API 접속 필요 (기본 실행 제외)",
]
addopts = "-m 'not integration' -ra"

[tool.ruff]
line-length = 100
# requires-python = ">=3.10" 와 정합 — ruff target 은 최소 지원 버전이어야 한다.
# (py311 은 3.10 런타임에 없는 idiom — 예: UP017 datetime.UTC — 을 제안해 깨짐)
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# 스크립트는 sys.path 부트스트랩(src/ 주입) 후 프로젝트 모듈을 import — E402 는
# 구조상 불가피하고 의도적. + 지역 상수(BATCH 등) UPPER / numpy X(feature matrix) 관례.
"scripts/**" = ["E402", "N806", "N803"]
# 테스트는 대상 모듈을 대문자 alias 로 import 하는 관례(N812) + 한국어 서술형 테스트
# 함수명(N802: test_..._완성차) + mock/stub 메서드 first-arg(N805) 의도적.
"tests/**" = ["N812", "N802", "N805"]
# tools 패키지는 import 시점에 Cypher 템플릿을 eager 병합(register_templates)한 뒤
# 도구를 노출 — 코드 후 import(E402) 가 구조상 의도적 (drift 즉시 검출).
"src/*/tools/__init__.py" = ["E402"]
# streamlit 진입점 — sys.path(src/) 부트스트랩 후 프로젝트 모듈 import (scripts 와 동일).
"src/autonexusgraph/ui/app.py" = ["E402"]

[tool.mypy]
# requires-python ">=3.10" + ruff target-version py310 와 정합 (최소 지원 버전).
python_version = "3.10"
strict = false
ignore_missing_imports = true
